# fastapi-tdd-docker-app

project/: pyproject.toml
project/app/: aerich.ini
